[package]
name = "rpc_client_middleware"
description = "Solana RPC client wrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["quangkeu95"]
repository = "https://github.com/quangkeu95/rpc_client_middleware"
homepage = "https://github.com/quangkeu95/rpc_client_middleware"


[dependencies]
solana-client = "~1.16"
# anyhow = "1.0.82"
# inquire = "0.7.4"
# tracing = "0.1.40"
# serde = "1.0.197"
# serde_json = "1.0.116"
# tracing-subscriber = "0.3.18"
# clap = { version = "4.5.4", features = ["derive"] }
